@@ -14,11 +14,6 @@
           <version>3.15.0</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <version>3.6.2</version>
-        </plugin>
-        <plugin>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.8</version>
@@ -40,30 +35,13 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <configuration>
           <mainClass>com.tofti.Boids</mainClass>
+          <launcher>boids</launcher>
+          <options>--enable-native-access=javafx.graphics</options>
         </configuration>
         <executions>
           <execution>
             <phase>package</phase>
             <goals><goal>jlink</goal></goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>com.tofti.Boids</mainClass>
-                </transformer>
-              </transformers>
-            </configuration>
           </execution>
         </executions>
       </plugin>
